Implemented info from URL module. #17

--- a/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall/Api - identify-vessel-length-overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall/Api - identify-vessel-length-overall.ipynb
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 46
     }
    ],
    "source": [
@@ -1445,7 +1445,6 @@
     "\n",
     "import spacy\n",
     "from spacy.lang.nb import Norwegian\n",
-    "from spacy.matcher import Matcher\n",
     "\n",
     "nlp = Norwegian()\n",
     "\n",
@@ -1499,6 +1498,238 @@
     "                result_length_prefix_dictionary = data\n",
     "\n",
     "    merged_line_result = result_length_dictionary | result_length_prefix_dictionary\n",
+    "    forward_result.append(merged_line_result)\n",
+    "\n",
+    "forward_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[{'length_value_1': '8',\n",
+       "  'length_separator': 'til',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '10',\n",
+       "  'part_number': '10',\n",
+       "  'sub_part_number': '2'},\n",
+       " {'length_value_1': '10,67',\n",
+       "  'length_separator': 'og',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '15',\n",
+       "  'part_number': '1',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value': '10,67',\n",
+       "  'measurement': 'meter',\n",
+       "  'length_prefix': 'mindre enn',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '15',\n",
+       "  'part_number': '4',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value_1': '10,67',\n",
+       "  'length_separator': 'og',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '16',\n",
+       "  'part_number': '1',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value': '10,67',\n",
+       "  'measurement': 'meter',\n",
+       "  'length_prefix': 'under',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '16',\n",
+       "  'part_number': '2',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value_1': '6',\n",
+       "  'length_separator': 'til',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '23',\n",
+       "  'part_number': '1',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value_1': '6',\n",
+       "  'length_separator': 'til',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '23',\n",
+       "  'part_number': '2',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value_1': '6',\n",
+       "  'length_separator': 'til',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '23',\n",
+       "  'part_number': '3',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value_1': '6',\n",
+       "  'length_separator': 'til',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '23',\n",
+       "  'part_number': '4',\n",
+       "  'sub_part_number': '1'},\n",
+       " {'length_value_1': '10,67',\n",
+       "  'length_separator': 'til',\n",
+       "  'length_value_2': '15',\n",
+       "  'measurement': 'meter',\n",
+       "  'regularion_year': '2013',\n",
+       "  'regularion_month': '11',\n",
+       "  'regularion_day': '22',\n",
+       "  'regularion_id': '1404',\n",
+       "  'chapter_number': '3',\n",
+       "  'section_number': '24',\n",
+       "  'part_number': '1',\n",
+       "  'sub_part_number': '1'}]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Something that must be done \n",
+    "# to make the notebook reload a function\n",
+    "# from a costum .py file.\n",
+    "#\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import importlib\n",
+    "\n",
+    "import transform_text_service_input_to_spacy_format\n",
+    "\n",
+    "from transform_text_service_input_to_spacy_format import get_data_from_text_service_item_url\n",
+    "\n",
+    "importlib.reload(transform_text_service_input_to_spacy_format)\n",
+    "\n",
+    "# Create API response\n",
+    "\n",
+    "import spacy\n",
+    "from spacy.lang.nb import Norwegian\n",
+    "\n",
+    "nlp = Norwegian()\n",
+    "\n",
+    "forward_result = []\n",
+    "\n",
+    "for line in forward_filtered_result_with_only_the_things_we_are_looking_for:\n",
+    "\n",
+    "    text_service_url = line['title'] #TODO convert to info\n",
+    "    text = line['text']\n",
+    "    ents = line['ents']\n",
+    "\n",
+    "    # result\n",
+    "    result_length_dictionary = {}\n",
+    "    result_length_prefix_dictionary = {}\n",
+    "    result_text_service_url = get_data_from_text_service_item_url(text_service_url)\n",
+    "\n",
+    "    for ent in ents:\n",
+    "\n",
+    "        ent_label = ent['label']\n",
+    "        ent_start = ent['start']\n",
+    "        ent_end = ent['end']\n",
+    "        ent_text = text[ent_start:ent_end]\n",
+    "\n",
+    "        ent_doc = nlp(ent_text)\n",
+    "        words_in_doc_count = len(ent_doc)\n",
+    "\n",
+    "        data = {}\n",
+    "\n",
+    "        if ent_label == \"LENGTH\" and words_in_doc_count == 4:\n",
+    "            # Example: 10,67 og 15 meter\n",
+    "            data['length_value_1'] = ent_doc[0].text\n",
+    "            data['length_separator'] = ent_doc[1].text\n",
+    "            data['length_value_2'] = ent_doc[2].text\n",
+    "            data['measurement'] = ent_doc[3].text\n",
+    "\n",
+    "            if not result_length_dictionary:\n",
+    "                result_length_dictionary = data\n",
+    "\n",
+    "        elif ent_label == \"LENGTH\" and words_in_doc_count == 2:\n",
+    "            # Example: 10,67 meter\n",
+    "            data['length_value'] = ent_doc[0].text\n",
+    "            data['measurement'] = ent_doc[1].text\n",
+    "\n",
+    "            if not result_length_dictionary:\n",
+    "                result_length_dictionary = data\n",
+    "\n",
+    "        elif ent_label == \"LENGTH_PREFIX\":\n",
+    "            # Example: mindre enn\n",
+    "            data['length_prefix'] = ent_doc.text\n",
+    "\n",
+    "            if not result_length_prefix_dictionary:\n",
+    "                result_length_prefix_dictionary = data\n",
+    "\n",
+    "    merged_line_result = result_length_dictionary | result_length_prefix_dictionary\n",
+    "\n",
+    "    if \"regularion_year\" in result_text_service_url:\n",
+    "        merged_line_result['regularion_year'] = result_text_service_url['regularion_year']\n",
+    "    if \"regularion_month\" in result_text_service_url:\n",
+    "        merged_line_result['regularion_month'] = result_text_service_url['regularion_month']\n",
+    "    if \"regularion_day\" in result_text_service_url:\n",
+    "        merged_line_result['regularion_day'] = result_text_service_url['regularion_day']\n",
+    "    if \"regularion_id\" in result_text_service_url:\n",
+    "        merged_line_result['regularion_id'] = result_text_service_url['regularion_id']\n",
+    "    if \"chapter_number\" in result_text_service_url:\n",
+    "        merged_line_result['chapter_number'] = result_text_service_url['chapter_number']\n",
+    "    if \"section_number\" in result_text_service_url:\n",
+    "        merged_line_result['section_number'] = result_text_service_url['section_number']\n",
+    "    if \"part_number\" in result_text_service_url:\n",
+    "        merged_line_result['part_number'] = result_text_service_url['part_number']\n",
+    "    if \"sub_part_number\" in result_text_service_url:\n",
+    "        merged_line_result['sub_part_number'] = result_text_service_url['sub_part_number']\n",
+    "\n",
     "    forward_result.append(merged_line_result)\n",
     "\n",
     "forward_result"
