--- a/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall/Api - identify-vessel-length-overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall/Api - identify-vessel-length-overall.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -43,25 +43,25 @@
      "name": "stdout",
      "text": [
       "Requirement already satisfied: spacy in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (3.0.5)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.19.3)\n",
       "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\n",
       "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.8.0)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.7.4)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (49.2.1)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.0.5)\n",
-      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.0)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.19.3)\n",
-      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.0)WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
+      "\n",
       "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.1.3)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (0.7.4)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.25.1)\n",
+      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (3.0.5)\n",
       "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (4.54.1)\n",
       "Requirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (7.4.5)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.25.1)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (49.2.1)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy) (2.0.5)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.12.5)\n",
       "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.10)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (4.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2020.12.5)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.2)\n",
-      "WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.2)\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1110,120 +1110,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[{'length_value_1': '8',\n",
-       "  'length_separator': 'til',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value_1': '10,67',\n",
-       "  'length_separator': 'og',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value': '10,67',\n",
-       "  'measurement': 'meter',\n",
-       "  'length_prefix': 'mindre enn'},\n",
-       " {'length_value_1': '10,67',\n",
-       "  'length_separator': 'og',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value': '10,67', 'measurement': 'meter', 'length_prefix': 'under'},\n",
-       " {'length_value_1': '6',\n",
-       "  'length_separator': 'til',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value_1': '6',\n",
-       "  'length_separator': 'til',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value_1': '6',\n",
-       "  'length_separator': 'til',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value_1': '6',\n",
-       "  'length_separator': 'til',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'},\n",
-       " {'length_value_1': '10,67',\n",
-       "  'length_separator': 'til',\n",
-       "  'length_value_2': '15',\n",
-       "  'measurement': 'meter'}]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "# Create API response\n",
-    "\n",
-    "import spacy\n",
-    "from spacy.lang.nb import Norwegian\n",
-    "\n",
-    "nlp = Norwegian()\n",
-    "\n",
-    "forward_result = []\n",
-    "\n",
-    "for line in forward_filtered_result_with_only_the_things_we_are_looking_for:\n",
-    "\n",
-    "    text_service_url = line['title'] #TODO convert to info\n",
-    "    text = line['text']\n",
-    "    ents = line['ents']\n",
-    "\n",
-    "    # result\n",
-    "    result_length_dictionary = {}\n",
-    "    result_length_prefix_dictionary = {}\n",
-    "\n",
-    "    for ent in ents:\n",
-    "\n",
-    "        ent_label = ent['label']\n",
-    "        ent_start = ent['start']\n",
-    "        ent_end = ent['end']\n",
-    "        ent_text = text[ent_start:ent_end]\n",
-    "\n",
-    "        ent_doc = nlp(ent_text)\n",
-    "        words_in_doc_count = len(ent_doc)\n",
-    "\n",
-    "        data = {}\n",
-    "\n",
-    "        if ent_label == \"LENGTH\" and words_in_doc_count == 4:\n",
-    "            # Example: 10,67 og 15 meter\n",
-    "            data['length_value_1'] = ent_doc[0].text\n",
-    "            data['length_separator'] = ent_doc[1].text\n",
-    "            data['length_value_2'] = ent_doc[2].text\n",
-    "            data['measurement'] = ent_doc[3].text\n",
-    "\n",
-    "            if not result_length_dictionary:\n",
-    "                result_length_dictionary = data\n",
-    "\n",
-    "        elif ent_label == \"LENGTH\" and words_in_doc_count == 2:\n",
-    "            # Example: 10,67 meter\n",
-    "            data['length_value'] = ent_doc[0].text\n",
-    "            data['measurement'] = ent_doc[1].text\n",
-    "\n",
-    "            if not result_length_dictionary:\n",
-    "                result_length_dictionary = data\n",
-    "\n",
-    "        elif ent_label == \"LENGTH_PREFIX\":\n",
-    "            # Example: mindre enn\n",
-    "            data['length_prefix'] = ent_doc.text\n",
-    "\n",
-    "            if not result_length_prefix_dictionary:\n",
-    "                result_length_prefix_dictionary = data\n",
-    "\n",
-    "    merged_line_result = result_length_dictionary | result_length_prefix_dictionary\n",
-    "    forward_result.append(merged_line_result)\n",
-    "\n",
-    "forward_result"
-   ]
-  },
-  {
    "source": [
     "# Create API responce"
    ],
@@ -1232,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1236,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 18
     }
    ],
    "source": [
