Created API identify-vessel-length-overall-in-text-service-norwegian-chapter-input. #17

--- a/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall/Api - identify-vessel-length-overall.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Api - identify-vessel-length-overall/Api - identify-vessel-length-overall.ipynb
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 20
     }
    ],
    "source": [
@@ -1251,92 +1251,23 @@
     "\n",
     "import importlib\n",
     "\n",
-    "import transform_text_service_input_to_spacy_format\n",
+    "import api_controller_identify_vessel_length_overall\n",
     "\n",
-    "from transform_text_service_input_to_spacy_format import get_data_from_text_service_item_url\n",
+    "from api_controller_identify_vessel_length_overall import create_api_response_for_post_identify_vessel_length_overall_in_text_service_norwegian_chapter_input\n",
     "\n",
-    "importlib.reload(transform_text_service_input_to_spacy_format)\n",
+    "importlib.reload(api_controller_identify_vessel_length_overall)\n",
     "\n",
-    "# Create API response\n",
+    "#####\n",
     "\n",
-    "import spacy\n",
-    "from spacy.lang.nb import Norwegian\n",
-    "\n",
-    "nlp = Norwegian()\n",
-    "\n",
-    "forward_result = []\n",
-    "\n",
-    "for line in forward_filtered_result_with_only_the_things_we_are_looking_for:\n",
-    "\n",
-    "    text_service_url = line['title'] #TODO convert to info\n",
-    "    text = line['text']\n",
-    "    ents = line['ents']\n",
-    "\n",
-    "    # result\n",
-    "    result_length_dictionary = {}\n",
-    "    result_length_prefix_dictionary = {}\n",
-    "    result_text_service_url = get_data_from_text_service_item_url(text_service_url)\n",
-    "\n",
-    "    for ent in ents:\n",
-    "\n",
-    "        ent_label = ent['label']\n",
-    "        ent_start = ent['start']\n",
-    "        ent_end = ent['end']\n",
-    "        ent_text = text[ent_start:ent_end]\n",
-    "\n",
-    "        ent_doc = nlp(ent_text)\n",
-    "        words_in_doc_count = len(ent_doc)\n",
-    "\n",
-    "        data = {}\n",
-    "\n",
-    "        if ent_label == \"LENGTH\" and words_in_doc_count == 4:\n",
-    "            # Example: 10,67 og 15 meter\n",
-    "            data['length_value_1'] = ent_doc[0].text\n",
-    "            data['length_separator'] = ent_doc[1].text\n",
-    "            data['length_value_2'] = ent_doc[2].text\n",
-    "            data['measurement'] = ent_doc[3].text\n",
-    "\n",
-    "            if not result_length_dictionary:\n",
-    "                result_length_dictionary = data\n",
-    "\n",
-    "        elif ent_label == \"LENGTH\" and words_in_doc_count == 2:\n",
-    "            # Example: 10,67 meter\n",
-    "            data['length_value'] = ent_doc[0].text\n",
-    "            data['measurement'] = ent_doc[1].text\n",
-    "\n",
-    "            if not result_length_dictionary:\n",
-    "                result_length_dictionary = data\n",
-    "\n",
-    "        elif ent_label == \"LENGTH_PREFIX\":\n",
-    "            # Example: mindre enn\n",
-    "            data['length_prefix'] = ent_doc.text\n",
-    "\n",
-    "            if not result_length_prefix_dictionary:\n",
-    "                result_length_prefix_dictionary = data\n",
-    "\n",
-    "    merged_line_result = result_length_dictionary | result_length_prefix_dictionary\n",
-    "\n",
-    "    if \"regularion_year\" in result_text_service_url:\n",
-    "        merged_line_result['regularion_year'] = result_text_service_url['regularion_year']\n",
-    "    if \"regularion_month\" in result_text_service_url:\n",
-    "        merged_line_result['regularion_month'] = result_text_service_url['regularion_month']\n",
-    "    if \"regularion_day\" in result_text_service_url:\n",
-    "        merged_line_result['regularion_day'] = result_text_service_url['regularion_day']\n",
-    "    if \"regularion_id\" in result_text_service_url:\n",
-    "        merged_line_result['regularion_id'] = result_text_service_url['regularion_id']\n",
-    "    if \"chapter_number\" in result_text_service_url:\n",
-    "        merged_line_result['chapter_number'] = result_text_service_url['chapter_number']\n",
-    "    if \"section_number\" in result_text_service_url:\n",
-    "        merged_line_result['section_number'] = result_text_service_url['section_number']\n",
-    "    if \"part_number\" in result_text_service_url:\n",
-    "        merged_line_result['part_number'] = result_text_service_url['part_number']\n",
-    "    if \"sub_part_number\" in result_text_service_url:\n",
-    "        merged_line_result['sub_part_number'] = result_text_service_url['sub_part_number']\n",
-    "\n",
-    "    forward_result.append(merged_line_result)\n",
-    "\n",
-    "forward_result"
+    "create_api_response_for_post_identify_vessel_length_overall_in_text_service_norwegian_chapter_input(forward_filtered_result_with_only_the_things_we_are_looking_for)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
