Detecting and adding chapter headline. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
@@ -58,6 +58,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "source": [
+    "# Does the input string contain a digit?\n",
+    "def hasNumbers(inputString):\n",
+    "    return any(char.isdigit() for char in inputString)\n",
+    "\n",
+    "hasNumbers('4444')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -82,8 +106,69 @@
    ]
   },
   {
+   "source": [
+    "# Pull out info from chapter text"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'chapter_title': '3. Fire, machinery and electric installations',\n",
+       " 'chapter_number': '3'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 73
+    }
+   ],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "forward_headline_and_section_list = []\n",
+    "\n",
+    "forward_chapter_info = {}\n",
+    "\n",
+    "for line_index_number, line_text in enumerate(forward_file_lines):\n",
+    "\n",
+    "    word_tokens = word_tokenize(line_text, language=\"english\")\n",
+    "\n",
+    "    sentence_word_count = len(word_tokens)\n",
+    "\n",
+    "    if sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
+    "        sentence_type = 'headline-section'\n",
+    "        type_value = word_tokens[1] # section number\n",
+    "        headline_in_a_list = word_tokens[3:sentence_word_count]\n",
+    "        headline_as_a_string = \" \".join(headline_in_a_list)\n",
+    "        forward_headline_and_section_list.append((str(line_index_number),sentence_type,type_value,line_text.replace(\"\\n\",\"\")))\n",
+    "\n",
+    "    # headline-chapter\n",
+    "    elif \"chapter_title\" not in forward_chapter_info and sentence_word_count > 2 and line_index_number == 0 and hasNumbers(word_tokens[0]):\n",
+    "\n",
+    "        forward_chapter_info['chapter_title'] = line_text.replace(\"\\n\",\"\")\n",
+    "        forward_chapter_info['chapter_number'] = word_tokens[0]\n",
+    "\n",
+    "#print(forward_headline_and_section_list)\n",
+    "forward_chapter_info"
+   ]
+  },
+  {
+   "source": [
+    "# Create XML content"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,15 +182,8 @@
    ]
   },
   {
-   "source": [
-    "# Create XML content"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +192,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "## Detecting and adding chapter headline"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "element_kapittel = ElementTree.SubElement(element_text, 'kapittel', type=\"kapittel\")\n",
+    "\n",
+    "if \"chapter_number\" in forward_chapter_info:\n",
+    "    attribute_id = \"/kapittel/\" + forward_chapter_info[\"chapter_number\"]\n",
+    "    element_kapittel.set('id', attribute_id)\n",
+    "\n",
+    "#url = \"https://lovdata.no/forskrift/2013-11-22-1404/k1\"\n",
+    "#element_kapittel.set('url', url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"chapter_title\" in forward_chapter_info:\n",
+    "    element_ktittel = ElementTree.SubElement(element_kapittel, \"ktittel\")\n",
+    "    element_ktittel.text = forward_chapter_info[\"chapter_title\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line_index_number, line_text in enumerate(forward_file_lines):\n",
+    "\n",
+    "    test = {}\n",
+    "    for text_line_index_number, text_line_type, text_line_value, text_line in forward_headline_and_section_list:\n",
+    "        if text_line_index_number == str(line_index_number) and text_line_type == \"headline-section\":\n",
+    "            test[\"section-title\"] = text_line\n",
+    "            break\n",
+    "\n",
+    "    if \"section-title\" in test:\n",
+    "        element_paragraf = ElementTree.SubElement(element_kapittel, \"paragraf\")\n",
+    "        element_ptittel = ElementTree.SubElement(element_paragraf, \"ptittel\")\n",
+    "        element_ptittel.text = test[\"section-title\"]"
+   ]
   },
   {
    "source": [
@@ -129,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
