* Successfully transformed part and subpart content to XML. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +44,11 @@
      "text": [
       "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\n",
       "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\n",
-      "WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
       "Requirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\n",
       "Requirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
+      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n",
+      "WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 2
     }
    ],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 4
     }
    ],
    "source": [
@@ -160,6 +160,204 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('0', 'headline-chapter', '3'),\n",
+       " ('1', 'none', 'none'),\n",
+       " ('2', 'headline-section', '7'),\n",
+       " ('3', 'part', '1'),\n",
+       " ('4', 'part', '2'),\n",
+       " ('5', 'part', '3'),\n",
+       " ('6', 'none', 'none'),\n",
+       " ('7', 'none', 'none'),\n",
+       " ('8', 'none', 'none'),\n",
+       " ('9', 'none', 'none'),\n",
+       " ('10', 'none', 'none'),\n",
+       " ('11', 'headline-section', '8'),\n",
+       " ('12', 'part', '1'),\n",
+       " ('13', 'part', '2'),\n",
+       " ('14', 'part', '3'),\n",
+       " ('15', 'none', 'none'),\n",
+       " ('16', 'headline-section', '9'),\n",
+       " ('17', 'part', '1'),\n",
+       " ('18', 'sub-part', 'a'),\n",
+       " ('19', 'none', 'none'),\n",
+       " ('20', 'sub-part', 'b'),\n",
+       " ('21', 'none', 'none'),\n",
+       " ('22', 'sub-part', 'c'),\n",
+       " ('23', 'none', 'none'),\n",
+       " ('24', 'part', '2'),\n",
+       " ('25', 'sub-part', 'a'),\n",
+       " ('26', 'none', 'none'),\n",
+       " ('27', 'sub-part', 'b'),\n",
+       " ('28', 'none', 'none'),\n",
+       " ('29', 'part', '3'),\n",
+       " ('30', 'part', '4'),\n",
+       " ('31', 'part', '5'),\n",
+       " ('32', 'part', '6'),\n",
+       " ('33', 'part', '7'),\n",
+       " ('34', 'none', 'none'),\n",
+       " ('35', 'headline-section', '10'),\n",
+       " ('36', 'part', '1'),\n",
+       " ('37', 'part', '2'),\n",
+       " ('38', 'part', '3'),\n",
+       " ('39', 'part', '4'),\n",
+       " ('40', 'part', '5'),\n",
+       " ('41', 'part', '6'),\n",
+       " ('42', 'part', '7'),\n",
+       " ('43', 'part', '8'),\n",
+       " ('44', 'part', '9'),\n",
+       " ('45', 'part', '10'),\n",
+       " ('46', 'none', 'none'),\n",
+       " ('47', 'headline-section', '11'),\n",
+       " ('48', 'part', '1'),\n",
+       " ('49', 'part', '2'),\n",
+       " ('50', 'none', 'none'),\n",
+       " ('51', 'headline-section', '12'),\n",
+       " ('52', 'part', '1'),\n",
+       " ('53', 'part', '2'),\n",
+       " ('54', 'part', '3'),\n",
+       " ('55', 'part', '4'),\n",
+       " ('56', 'part', '5'),\n",
+       " ('57', 'none', 'none'),\n",
+       " ('58', 'headline-section', '13'),\n",
+       " ('59', 'none', 'none'),\n",
+       " ('60', 'none', 'none'),\n",
+       " ('61', 'headline-section', '14'),\n",
+       " ('62', 'part', '1'),\n",
+       " ('63', 'part', '2'),\n",
+       " ('64', 'part', '3'),\n",
+       " ('65', 'part', '4'),\n",
+       " ('66', 'none', 'none'),\n",
+       " ('67', 'headline-section', '15'),\n",
+       " ('68', 'part', '1'),\n",
+       " ('69', 'part', '2'),\n",
+       " ('70', 'part', '3'),\n",
+       " ('71', 'part', '4'),\n",
+       " ('72', 'part', '5'),\n",
+       " ('73', 'none', 'none'),\n",
+       " ('74', 'headline-section', '16'),\n",
+       " ('75', 'part', '1'),\n",
+       " ('76', 'part', '2'),\n",
+       " ('77', 'none', 'none'),\n",
+       " ('78', 'headline-section', '17'),\n",
+       " ('79', 'part', '1'),\n",
+       " ('80', 'part', '1'),\n",
+       " ('81', 'part', '3'),\n",
+       " ('82', 'part', '4'),\n",
+       " ('83', 'none', 'none'),\n",
+       " ('84', 'none', 'none'),\n",
+       " ('85', 'none', 'none'),\n",
+       " ('86', 'none', 'none'),\n",
+       " ('87', 'none', 'none'),\n",
+       " ('88', 'headline-section', '18'),\n",
+       " ('89', 'none', 'none'),\n",
+       " ('90', 'none', 'none'),\n",
+       " ('91', 'headline-section', '19'),\n",
+       " ('92', 'none', 'none'),\n",
+       " ('93', 'none', 'none'),\n",
+       " ('94', 'headline-section', '20'),\n",
+       " ('95', 'part', '1'),\n",
+       " ('96', 'part', '2'),\n",
+       " ('97', 'part', '3'),\n",
+       " ('98', 'none', 'none'),\n",
+       " ('99', 'headline-section', '21'),\n",
+       " ('100', 'part', '1'),\n",
+       " ('101', 'sub-part', 'a'),\n",
+       " ('102', 'none', 'none'),\n",
+       " ('103', 'sub-part', 'b'),\n",
+       " ('104', 'none', 'none'),\n",
+       " ('105', 'part', '2'),\n",
+       " ('106', 'none', 'none'),\n",
+       " ('107', 'headline-section', '22'),\n",
+       " ('108', 'part', '1'),\n",
+       " ('109', 'sub-part', 'a'),\n",
+       " ('110', 'none', 'none'),\n",
+       " ('111', 'sub-part', 'b'),\n",
+       " ('112', 'none', 'none'),\n",
+       " ('113', 'sub-part', 'c'),\n",
+       " ('114', 'none', 'none'),\n",
+       " ('115', 'sub-part', 'd'),\n",
+       " ('116', 'none', 'none'),\n",
+       " ('117', 'part', '2'),\n",
+       " ('118', 'none', 'none'),\n",
+       " ('119', 'headline-section', '23'),\n",
+       " ('120', 'part', '1'),\n",
+       " ('121', 'part', '2'),\n",
+       " ('122', 'part', '3'),\n",
+       " ('123', 'part', '4'),\n",
+       " ('124', 'none', 'none'),\n",
+       " ('125', 'headline-section', '24'),\n",
+       " ('126', 'part', '1'),\n",
+       " ('127', 'sub-part', 'a'),\n",
+       " ('128', 'none', 'none'),\n",
+       " ('129', 'sub-part', 'b'),\n",
+       " ('130', 'none', 'none'),\n",
+       " ('131', 'sub-part', 'c'),\n",
+       " ('132', 'none', 'none'),\n",
+       " ('133', 'sub-part', 'd'),\n",
+       " ('134', 'none', 'none'),\n",
+       " ('135', 'part', '2'),\n",
+       " ('136', 'sub-part', 'a'),\n",
+       " ('137', 'none', 'none'),\n",
+       " ('138', 'sub-part', 'b'),\n",
+       " ('139', 'none', 'none'),\n",
+       " ('140', 'part', '3'),\n",
+       " ('141', 'part', '4'),\n",
+       " ('142', 'part', '5'),\n",
+       " ('143', 'none', 'none'),\n",
+       " ('144', 'headline-section', '25'),\n",
+       " ('145', 'none', 'none')]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "forward_identified_sentence_type_list = []\n",
+    "\n",
+    "for line_index_number, line_text in enumerate(forward_file_lines):\n",
+    "\n",
+    "    word_tokens = word_tokenize(line_text, language=\"english\")\n",
+    "\n",
+    "    sentence_word_count = len(word_tokens)\n",
+    "\n",
+    "    if sentence_word_count > 3 and word_tokens[0] == '(' and hasNumbers(word_tokens[1]) and word_tokens[2] == ')':\n",
+    "        sentence_type = 'part'\n",
+    "        type_value = word_tokens[1] # part number\n",
+    "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
+    "\n",
+    "    elif sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
+    "        sentence_type = 'headline-section'\n",
+    "        type_value = word_tokens[1] # section number\n",
+    "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
+    "\n",
+    "    elif sentence_word_count > 2 and word_tokens[1] == ')':\n",
+    "        sentence_type = 'sub-part'\n",
+    "        type_value = word_tokens[0] # sub-part character\n",
+    "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
+    "\n",
+    "    elif sentence_word_count > 2 and line_index_number == 0 and hasNumbers(word_tokens[0]):\n",
+    "        sentence_type = 'headline-chapter'\n",
+    "        type_value = word_tokens[0] # chapter number\n",
+    "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
+    "\n",
+    "    else:\n",
+    "        sentence_type = 'none'\n",
+    "        type_value = 'none'\n",
+    "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
+    "\n",
+    "forward_identified_sentence_type_list"
+   ]
+  },
+  {
    "source": [
     "# Create XML content"
    ],
@@ -168,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,22 +418,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nNon-combustible material means a material which, when tested and evaluated in accordance with MSC.61(67) (the FTP Code), satisfies the requirements for qualifying materials as non-combustible. The insulation shall, if necessary in order to preserve the fire-insulating effect, be mounted with a sheet of galvanized steel or aluminium.\n\n0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nThe vessel's machinery space shall have at least two ventilators capable of being closed from deck. Cabins shall have at least two ventilators with a diameter of at least 8 cm.\n\nMaterials, varnishes, paints, etc. produced on a nitrocellulose basis or any other basis which will readily ignite are not permitted to be used anywhere on board.\n\nVessels constructed pursuant to Nordic Boat Standard (1990) are considered to satisfy the requirements of sections 18, 19 and 20.\n\n"
+     ]
+    }
+   ],
    "source": [
+    "previous_sentence_type_that_was_not_none = \"none\"\n",
+    "\n",
+    "chapter_number = \"undetected\"\n",
+    "section_number = \"undetected\"\n",
+    "part_number = \"undetected\"\n",
+    "\n",
+    "element_section = \"\"\n",
+    "element_part = \"\"\n",
+    "element_sub_part = \"\"\n",
+    "\n",
     "for line_index_number, line_text in enumerate(forward_file_lines):\n",
     "\n",
-    "    test = {}\n",
-    "    for text_line_index_number, text_line_type, text_line_value, text_line in forward_headline_and_section_list:\n",
-    "        if text_line_index_number == str(line_index_number) and text_line_type == \"headline-section\":\n",
-    "            test[\"section-title\"] = text_line\n",
-    "            break\n",
+    "    # get metadata about sentence\n",
+    "    identified_sentence_type_as_tuple = forward_identified_sentence_type_list[line_index_number]\n",
+    "    identified_sentence_type = identified_sentence_type_as_tuple[1]\n",
+    "    identified_sentence_value = identified_sentence_type_as_tuple[2]\n",
     "\n",
-    "    if \"section-title\" in test:\n",
-    "        element_paragraf = ElementTree.SubElement(element_kapittel, \"paragraf\")\n",
-    "        element_ptittel = ElementTree.SubElement(element_paragraf, \"ptittel\")\n",
-    "        element_ptittel.text = test[\"section-title\"]"
+    "    ###\n",
+    "\n",
+    "    if identified_sentence_type == \"headline-chapter\":\n",
+    "        chapter_number = identified_sentence_value\n",
+    "\n",
+    "    elif identified_sentence_type == \"headline-section\":\n",
+    "        section_number = identified_sentence_value\n",
+    "\n",
+    "        element_section = ElementTree.SubElement(element_kapittel, \"paragraf\")\n",
+    "        element_ptittel = ElementTree.SubElement(element_section, \"ptittel\")\n",
+    "        element_ptittel.text = line_text.replace(\"\\n\",\"\")\n",
+    "\n",
+    "    elif identified_sentence_type == \"part\":\n",
+    "        part_number = identified_sentence_value\n",
+    "\n",
+    "        element_part = ElementTree.SubElement(element_section, \"ledd\")\n",
+    "        element_part.text = line_text.replace(\"\\n\",\"\")\n",
+    "\n",
+    "        new_id = \"/kapittel/\" + chapter_number + \"/paragraf/\" + section_number + \"/ledd/\" + part_number\n",
+    "        element_part.set(\"id\", new_id)\n",
+    "\n",
+    "    elif identified_sentence_type == \"sub-part\":\n",
+    "\n",
+    "        element_sub_part = ElementTree.SubElement(element_part, \"liste\")\n",
+    "\n",
+    "        element_sub_part_lverdi = ElementTree.SubElement(element_sub_part, \"lverdi\")\n",
+    "        element_sub_part_lverdi.text = identified_sentence_value\n",
+    "\n",
+    "        element_sub_part_avsnitt = ElementTree.SubElement(element_sub_part, \"avsnitt\")\n",
+    "        element_sub_part_avsnitt.text = line_text.replace(\"\\n\",\"\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    ###\n",
+    "\n",
+    "    # at the end of the loop\n",
+    "    if identified_sentence_type != \"none\":\n",
+    "        previous_sentence_type_that_was_not_none = identified_sentence_type\n",
+    "    else:\n",
+    "        if line_text != \"\\n\":\n",
+    "            print(line_text) # TODO this must be added to the XML. Handle after everything else is completed.\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -247,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
